--- a/popup/style.css
+++ b/popup/style.css
@@ -24,6 +24,7 @@
 }
 
 .blocked-sites-list-item {
+  position: relative;
   margin-block: 5px;
   width: 100%;
   padding: 12px 16px;
@@ -32,6 +33,30 @@
   font-family: inherit;
   background-color: transparent;
   border: 1px solid #414141;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.blocked-sites-list-item > button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  border-top-right-radius: inherit;
+  border-bottom-right-radius: inherit;
+  height: 100%;
+  padding-block-start: 3px;
+  padding-inline: inherit;
+  border: none;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+
+  color: white;
+
+  cursor: pointer;
+
+  background-color: rgb(228, 28, 28);
 }
 
 .container button:active {
