--- a/popup/style.css
+++ b/popup/style.css
@@ -124,3 +124,61 @@ input:focus {
   background-color: #fff;
   border-color: #fff;
 }
+
+dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.form-actions {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.form-actions button {
+  margin-inline-start: 5px;
+  color: white;
+  background: #313131;
+  border: 1px solid #414141;
+  padding: 6px 8px;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.form-actions button:hover {
+  background-color: #fff;
+  border-color: #313131;
+  color: #313131;
+}
+
+#startHour,
+#endHour {
+  color: black;
+}
+
+#work-hours {
+  color: #717171;
+  align-self: flex-end;
+}
+
+#setTimeBtn {
+  margin-inline-start: 5px;
+  color: white;
+  background: #313131;
+  border: 1px solid #414141;
+  padding: 6px 8px;
+  cursor: pointer;
+  border-radius: 6px;
+}
